# finance_manager

./: .gitignore  .pre-commit-config.yml  pyproject.toml  readme.md  todo.md
pf_manager/: base_classes.py
